update gitignore to more relevant things
Signed-off-by: Jim Klo <jim.klo@sri.com>

--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,6 @@ LR/*.backup
 /utils/testconfig.ini
 
 env
-couchdb/apps/kanso/oauth-key-management/packages
-couchdb/apps/kanso/restrict-writers/packages
+couchdb/apps/kanso/*/packages
+
+LR/data/sessions/*
